# E2E_Framework

./: .gitignore  CMakeLists.txt  README.md  example1.txt  example2.txt  paths.json  paths.txt  results.txt  taskExample1.txt  taskExample2.txt  taskExample3.txt
.github/workflows/: cmake-multi-platform.yml
doxygen_files/: Namespaces.h  index.md
include/: Analysis.h  ConsoleLogger.h  InputReader.h  MathFramework.h  PeriodicTask.h  Setup.h  Task.h  TaskScheduling.h  TimedPath.h
include/e2e/: Analysis.h  MathFramework.h  PeriodicTask.h  TaskScheduling.h  TimedPath.h
include/e2e/io/: CommandLineArgs.h
include/e2e/io/logger/: ConsoleColor.h  ConsoleLogger.h  ConsoleSystemLogger.h  IResultLogger.h  ISystemLogger.h  PlainTextLogger.h  SimplifiedConsoleLogger.h  SimplifiedPlainTextLogger.h
include/e2e/io/reader/: ConsoleTaskInstanceReader.h  ConsoleTaskReader.h  ITaskInstanceReader.h  ITaskReader.h  PlainTextTaskInstanceReader.h  PlainTextTaskReader.h
include/e2e/setup/: Factory.h  Preset.h  Setup.h
include/io/: ConsoleLogger.h  ConsoleTaskReader.h  ILogger.h  IReader.h  ITaskInstanceReader.h  ITaskReader.h  InputReader.h  JsonInputReader.h  SimpleTextReader.h  SimpleTextTaskReader.h  TaskConsoleLogger.h  TaskInstanceInputReader.h  TaskInstanceSimpleTextReader.h  TaskTextLogger.h  TextLogger.h
include/io/logger/: ConsoleLogger.h  ConsoleSystemLogger.h  ILogger.h  IResultLogger.h  ISystemLogger.h  PlainTextLogger.h  SimplifiedConsoleLogger.h  SimplifiedPlainTextLogger.h  SimplifiedTextLogger.h  TaskConsoleLogger.h  TaskTextLogger.h  TextLogger.h
include/io/reader/: ConsoleTaskInstanceReader.h  ConsoleTaskReader.h  ITaskInstanceReader.h  ITaskReader.h  PlainTextTaskInstanceReader.h  PlainTextTaskReader.h  SimpleTextTaskReader.h  TaskInstanceInputReader.h  TaskInstanceSimpleTextReader.h
include/setup/: Factory.h  Preset.h  Setup.h
source/: Analysis.cpp  ConsoleLogger.cpp  InputReader.cpp  MathFramework.cpp  PeriodicTask.cpp  Setup.cpp  Task.cpp  TaskScheduling.cpp  TimedPath.cpp  main.cpp  main_individualPath.cpp
source/executable/: main_IndividualPath.cpp  main_Tasks.cpp
source/io/: ConsoleLogger.cpp  ConsoleTaskReader.cpp  InputReader.cpp  JsonInputReader.cpp  SimpleTextReader.cpp  SimpleTextTaskReader.cpp  TaskConsoleLogger.cpp  TaskInstanceInputReader.cpp  TaskInstanceSimpleTextReader.cpp  TaskTextLogger.cpp  TextLogger.cpp
source/io/logger/: ConsoleColor.cpp  ConsoleLogger.cpp  ConsoleSystemLogger.cpp  SimplifiedConsoleLogger.cpp  SimplifiedTextLogger.cpp  TaskConsoleLogger.cpp  TaskTextLogger.cpp  TextLogger.cpp
source/io/reader/: ConsoleTaskReader.cpp  SimpleTextTaskReader.cpp  TaskInstanceInputReader.cpp  TaskInstanceSimpleTextReader.cpp
source/setup/: Preset.cpp  Setup.cpp
tests/: AnalysisTests.cpp  MathFrameworkTests.cpp  TaskSchedulingTests.cpp  TemporaryTest.cpp  TimedPathTests.cpp
